skip fetching manual entered data from healthconnect sources